<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.4</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.exercise</groupId>
    <artifactId>atexo</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>atexo</name>
    <description>Atexo exercise</description>

    <modules>
        <module>api-spec</module>
        <module>numbering-api</module>
    </modules>

    <properties>
        <java.version>21</java.version>

        <openapi-generator.version>7.9.0</openapi-generator.version>
        <swagger-annotation.version>2.2.23</swagger-annotation.version>
        <jackson-databind-nullable.version>0.2.6</jackson-databind-nullable.version>
    </properties>
    <dependencyManagement>
		<dependencies>
            <dependency>
                <groupId>com.exercise</groupId>
                <artifactId>api-spec</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-annotations</artifactId>
                <version>${swagger-annotation.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openapitools</groupId>
                <artifactId>jackson-databind-nullable</artifactId>
                <version>${jackson-databind-nullable.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
